feat: Added motor driver and radio features
TODO: Solve problem with motor initialize

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(app-template)
+include_directories(${CMAKE_SOURCE_DIR}/include)
+project(POC_Espressif LANGUAGES CXX C)
